# multiagent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/: __init__.py  basic_usage.py
src/: __init__.py  config.py
src/agents/: __init__.py  analyst.py  base.py  extractor.py  qc.py  researcher.py  reviewer.py  supervisor.py  writer.py
src/api/: __init__.py  app.py
src/api/routes/: agents.py  health.py  patent_reports.py  workflows.py
src/memory/: __init__.py  conversation.py  vector_store.py
src/patent_pipeline/: __init__.py  graph.py  state.py
src/patent_pipeline/models/: __init__.py  requests.py  stage1.py  stage2.py  stage3.py  stage4.py
src/patent_pipeline/nodes/: __init__.py  ingest.py  save_reports.py  search_intel.py  stage1.py  stage2_merge.py  stage2a.py  stage2b.py  stage2c.py  stage3.py  stage4.py  tech_pack_router.py
src/patent_pipeline/prompts/: PROMPT_Pipeline1_Stage1_RecordExtraction_v2.md  PROMPT_Pipeline1_Stage2A_ClaimConstruction_Estoppel_v2.md  PROMPT_Pipeline1_Stage2B_Search_Technical_v2.md  PROMPT_Pipeline1_Stage2C_Timeline_Synthesis_v2.md  PROMPT_Pipeline1_Stage3_ReportGeneration_v2.md  PROMPT_Pipeline1_Stage4_QC_Verification_v2.md  PROMPT_Pipeline2_SearchIntelligence_Module_v1.md  readme.md
src/tools/: __init__.py  base.py  calculator.py  file_handler.py  web_search.py
src/workflows/: __init__.py  content_pipeline.py  patent_workflow.py  research_workflow.py  state.py
tests/: __init__.py  test_agents.py  test_api.py  test_patent_api.py  test_patent_pipeline.py  test_tools.py
(+14 files in other folders)
